cert/ingress-gateway-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-prod
  namespace: tuplus
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 999m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tuplus.code-lab.kr
    secretName: tuplus-prod-tls
  rules:
  - host: tuplus.code-lab.kr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway
            port:
              number: 80
